refactor(security): Optimize authentication code file writing and response key loading logic